@@ -1,4 +1,5 @@
 LIST OF CHANGES for npg_ranger project
+  - upgrade commander from 2.20.0 to 8.3.0
   - upgrade @prantlf/jsonlint from 8.0.2 to 10.2.0
   - upgrade async from 3.1.0 to 3.2.3
   - upgrade config-chain from 1.1.12 to 1.1.13
